--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-	<string name="app_name">NotePlus</string>
+	<string name="app_name">NotePlusV2</string>
 	<string name="action_settings">Settings</string>
 	<!-- Strings used for fragments for navigation -->
 	<string name="first_fragment_label">First Fragment</string>
